--- a/picture-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/picture-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -3,12 +3,12 @@ spring:
   rabbitmq: 
            host: 192.168.20.175
            port: 5672
-           username: scm-message-service-qa
-           password: scm-message-service-qa
-           virtual-host: /scm-message-service-qa
+           username: scm-message-service
+           password: scm-message-service
+           virtual-host: /scm-message-service
   cloud: 
         consul: 
-          host: 192.168.20.176
+          host: 192.168.20.110
           port: 8500
           discovery: 
             instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
