--- a/supplier-product-consumer-service/src/main/resources/config/application-pro.yml
+++ b/supplier-product-consumer-service/src/main/resources/config/application-pro.yml
@@ -1,27 +1,33 @@
+feign.hystrix.enabled: false
 spring: 
   rabbitmq: 
            host: 192.168.20.175
            port: 5672
-           username: scm-message-service
-           password: scm-message-service
-           virtual-host: /scm-message-service
+           username: scm-message-service-qa
+           password: scm-message-service-qa
+           virtual-host: /scm-message-service-qa
   cloud: 
+        consul: 
+          host: 192.168.20.176
+          port: 8500
+          discovery: 
+            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
         stream: 
               bindings: 
-                        orders: 
-                              destination: SupplierOrderSync
-                              group: push-order
+                        supplierPictureProduct: 
+                              destination: supplier.product.picture
+                              group: one
                               consumer: 
                                        concurrency: 5
                                        maxAttempts: 1
               rabbit: 
                       bindings: 
-                        orders: 
-                              consumer: 
+                            supplierPictureProduct: 
+                                  consumer: 
                                        prefix: HA.
-                                       autoBindDlq: true
-                                       requeueRejected: false
-                                       republishToDlq: true
+                                       autoBindDlq: false
+                                       requeueRejected: true
+                                       republishToDlq: false
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
   mail: 
@@ -33,9 +39,9 @@ spring:
        protocol: smtp # Protocol used by the SMTP server.
        username: yanxiaobin@shangpin.com # Login user of the SMTP server.
        password: 123.com # Login password of the SMTP server.
-       test-connection: true # Test that the mail server is available on startup.
+       test-connection: false # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
-       #image:
-             #location: classpath:banner/logo.jpg # Banner image file location (jpg/png can also be used).
+       image:
+             location: classpath:banner/logo.jpg # Banner image file location (jpg/png can also be used).
